# mini-benchmarker

./: .gitignore  CMakeLists.txt  README.md  mini-bench.pc
demo/: demo.cpp
include/: benchmark.h  minibench.h
src/: bench_data.cpp  bench_data.h  benchmark.cpp  benchmark.h
